--- a/Header/header_16_0_0/sass/header_16_0_0.scss
+++ b/Header/header_16_0_0/sass/header_16_0_0.scss
@@ -378,6 +378,7 @@ a {
                     padding-top: 0;
                     background: none;
                    display: none;
+                   opacity: 1;
                     ul {
                         padding: 0px;
                         margin: -2px;
