--- a/Slider/slider_5_0_0/css/slider_5_0_0.css
+++ b/Slider/slider_5_0_0/css/slider_5_0_0.css
@@ -1,2 +1,8 @@
-.slider_5_0_0{padding:0;position:relative;z-index:0}.slider_5_0_0 img{width:100%}
+.slider_5_0_0 {
+  padding: 0;
+  position: relative;
+  z-index: 0; }
+  .slider_5_0_0 img {
+    width: 100%; }
+
 /*# sourceMappingURL=slider_5_0_0.css.map */
