--- a/Home/history_1_0_0/sass/history_1_0_0.scss
+++ b/Home/history_1_0_0/sass/history_1_0_0.scss
@@ -67,7 +67,6 @@
     &__box1Item1Content1Box {
         display: flex;
         border: 2px solid #06978b;
-        align-items: center;
     }
 
     &__BN {
@@ -89,8 +88,10 @@
 
     &__line1 {
         position: absolute;
-        top: 112px;
-        left: 480px;
+        border-top: 2px solid #06978b;
+        top: 140px;
+        right: 1px;
+        width: 50%;
     }
 
     &__box1Item1.right {
@@ -100,8 +101,10 @@
 
     &__line3 {
         position: absolute;
-        top: 112px;
-        right: 480px;
+        border-top: 2px solid #06978b;
+        width: 50%;
+        left: 0px;
+        top: 141px;
     }
 
     &__BoxItem2 {
@@ -112,15 +115,18 @@
         text-align: center;
         background-color: #06978b;
         color: #fff;
-        width: 20%;
+        display: table;
+        padding: 2px 5px;
         margin: 0 auto;
     }
 
     &__box1Item2Content1Box2 {
         margin: 39px 0px 0px 81px;
-        padding: 10px 40px;
+        padding: 27px 40px 0;
         border: 2px solid #9f6c14;
-        border-radius: 75px;
+        border-radius: 94px;
+        background: #fff;
+        position: relative;
     }
 
     &__box1Item2.left {
@@ -128,22 +134,26 @@
     }
 
     &__box1Item2.right {
-        background-color: #fff;
+        // background-color: #fff;
         position: relative;
     }
 
     &__line5 {
         position: absolute;
-        top: 96px;
-        left: 480px;
+        border-top: 2px solid #9f6c14;
+        top: 117px;
+        width: 50%;
+        left: 284px;
+    
     }
 
     &__box1Item2Content1Time {
         background-color: #f5daab;
         color: #4c230a;
         font-weight: 600;
-        width: 35%;
-        text-align: center;
+       display: table;
+       padding: 0 8px;
+       margin-bottom: 8px;
         border-radius: 15px;
     }
 
@@ -151,40 +161,52 @@
         background-color: #f5daab;
         color: #4c230a;
         font-weight: 600;
-        width: 45%;
+      display: table;
+      padding: 0 8px;
         text-align: center;
         border-radius: 15px;
+        margin-bottom: 8px;
     }
 
     &__line2 {
         position: absolute;
-        top: 67px;
-        left: 428px;
+        border-top: 2px solid #9f6c14;
+        width: 50%;
+        top: 85px;
+        right: 0px;
     }
 
     &__line4 {
         position: absolute;
-        top: 66px;
-        left: 0px;
+        border-top: 2px solid #a67625;
+        width: 50%;
+        left: 0;
+        top: 85px;
     }
 
     &__line6 {
         position: absolute;
-        left: 0px;
-        top: 111px;
+        border-top: 2px solid #a67625;
+        width: 50%;
+        left: 0;
+        top: 120px;
     }
 
     &__box1Item2Content1 {
         border: 2px solid #9f6c14;
-        padding: 17px 40px;
-        border-radius: 86px;
+        padding: 38px 40px 9px;
+        border-radius: 100px;
+        background: #fff;
+        position: relative;
     }
 
     &__box1Item2Content2 {
         border: 2px solid #9f6c14;
         margin-top: 40px;
-        padding: 10px 80px;
-        border-radius: 75px;
+        padding: 24px 48px 0 ;
+        border-radius: 97px;
+        background: #fff;
+        position: relative;
     }
 
     &__box1Item2Content1Des {
@@ -199,22 +221,26 @@
     }
 
     &__box1Item1Content1Text {
-        padding: 0 10px 0 10px;
+        padding: 14px 10px 0 10px;
     }
 
     &__box1Item1Content1Des {
-        font-size: 13px;
-    }
-
-    &__box1Item1Content1Pic {
-        height: 229px;
+        font-size: 15px;
+        margin-top: 8px;
     }
 
     &__box1Item1Content1Title {
         font-weight: 600;
         color: #06978b;
     }
-
+    &__box1Item1Content1 {
+        background: #fff;
+        position: relative;
+    }
+    img {
+      
+        display: block;
+    }    
     @media(max-width: 1024px) {
         &__title2 {
             width: 32%;
@@ -241,25 +267,7 @@
             font-size: 12px;
         }
 
-        &__line1 {
-            left: 380px;
-            top: 90px;
-        }
-
-        &__line2 {
-            top: 66px;
-            left: 358px;
-        }
-
-        &__line3 {
-            top: 90px;
-            right: 380px;
-        }
-
-        &__line5 {
-            top: 103px;
-            left: 380px;
-        }
+       
 
         &__box1Item2Content1Des {
             font-size: 12px;
@@ -269,15 +277,11 @@
             padding: 14px 30px;
         }
 
-        &__box1Item2Content1Time {
-            width: 38%;
-        }
 
         &__box1Item2Content1Time1 {
             background-color: #f5daab;
             color: #4c230a;
             font-weight: 600;
-            width: 58%;
             text-align: center;
             border-radius: 15px;
         }
@@ -296,7 +300,7 @@
         }
         &__box1Item1 {
             width: 74%;
-            z-index: 5;
+           
         }
 
         &__box1Item1Content1Pic {
@@ -363,12 +367,15 @@
         }
 
         &__box1Item2Content1Time {
-            margin: 0 auto;
+            margin-left: 35px;
+            margin-top: 12px;
         }
 
         &__box1Item2Content1Des {
-            text-align: center;
+            text-align: left;
             font-size: 15px;
+            padding: 0 36px;
+
         }
 
         &__BN {
@@ -390,13 +397,14 @@
         }
 
         &__box1Item2Content1Time1 {
-            width: 50%;
-            margin: 0 auto;
+            margin: 10px 40px;
         }
+     
     }
 
     @media(max-width: 480px) {
         &__title {
+            margin: 24px auto;
             a {
                 font-size: 16px;
             }
@@ -408,9 +416,7 @@
                 font-size: 14px;
             }
         }
-        &__box1Item1Content1Time{
-            width: 30%;
-        }
+       
        &__box1Item1.left{
         width: 100%;
         }
@@ -423,6 +429,7 @@
        &__box1Item2Content1Des{
            font-size: 14px;
            margin-top: 9px;
+           padding: 0 30px;
        }
        &__box1Item2Content1Box2{
            padding: 0;
@@ -432,6 +439,7 @@
        }
        &__box1Item2Content2{
            padding: 0;
+           background: #fff;
        }
        &__box1Item1{
            margin-bottom: 50px;
@@ -441,16 +449,27 @@
        
        }
        &__box1Item2.left{
-        width: 100%;
+        width: 90%;
     }
     &__box1Item2.right{
-        width: 100%;
+        width: 90%;
     }
-    }
+}
     @media(max-width: 375px){
     &__box1Item1Content1Pic{
         height: 147px;
     }
-   
+    &__box1Item2Content1Des{
+        font-size: 12px;
     }
+}
+   @media(max-width: 320px){
+    &__box1Item2Content1Des{
+        font-size: 12px;
+    }
+    &__box1Item2Content1Des{
+        font-size: 10px;
+    }
+   }
+    
 }
