add module post_aythor_1_0_0

--- a/Home/about_8_0_0/css/about_8_0_0.css
+++ b/Home/about_8_0_0/css/about_8_0_0.css
@@ -1,2 +1,166 @@
-.about_8_0_0{background:url(../images/ab-bg_02.jpg) center 0 no-repeat;padding:30px 0}.about_8_0_0 .mb{display:none}.about_8_0_0 .accordions-content_active{max-height:max-content}.about_8_0_0 .accordions-title{font-weight:bold;border-radius:33px;background-color:#e8bd4b;color:#392903;text-align:center;margin:8px auto 5px;padding:10px 30px;display:table}.about_8_0_0 .accordions-content{display:flex;flex-direction:column;align-items:center}.about_8_0_0 .accordions-content{background-color:unset}.about_8_0_0 .accordions-content__tt{margin-top:0px;margin-bottom:5px;border-radius:33px;text-align:center;min-width:60%;padding:5px 13px;background:#ece2d6}.about_8_0_0 .accordions-content__tt a{color:#392903}.about_8_0_0 .accordions-title-st{background-color:#e8bd4b;color:#392903}.about_8_0_0__title{font-size:24px;text-align:center;font-weight:600;color:#037e79;padding:10px 20px;margin:53px auto;background-color:#ffecb8;width:30%;border-radius:20px}.about_8_0_0__title::before{content:'';position:absolute;left:585px;top:56px;width:1px;height:53px;border:0.25px solid #fff}.about_8_0_0__line{width:81%;margin:15px auto 40px;position:relative;border-top:1px solid #fff}.about_8_0_0__box{display:flex;flex-wrap:wrap;justify-content:space-between}.about_8_0_0__tt{font-size:16px;text-align:center;color:#fff;padding:8px 10px;border-radius:20px;margin:0 auto;margin-bottom:34px;width:85%;position:relative}.about_8_0_0__tt:nth-child(1)::before{border:0.25px solid #fff;left:108px;height:39px;top:-39px}.about_8_0_0__tt::before{content:'';position:absolute;top:-30px;left:92px;width:1px;height:30px;border:0.25px dashed #6c6c6c}.about_8_0_0__item{width:19%}.about_8_0_0__item:nth-child(1) .about_8_0_0__tt{position:relative;color:#392903;background-color:#e8bd4b}.about_8_0_0__item:nth-child(1) .about_8_0_0__tt a{color:#392903}.about_8_0_0__item:nth-child(1) .about_8_0_0__tt:nth-child(1){width:100%;font-weight:bold;background-color:#e8bd4b}.about_8_0_0__item:nth-child(1) .about_8_0_0__tt:nth-child(1) a{color:#392903}.about_8_0_0__item .about_8_0_0__tt{background-color:#027f78}.about_8_0_0__item .about_8_0_0__tt a{color:#fff}.about_8_0_0__item .about_8_0_0__tt:nth-child(1){width:100%;font-weight:bold;color:#037e79;background-color:#fff}.about_8_0_0__item .about_8_0_0__tt:nth-child(1) a{color:#037e79}.about_8_0_0 p{text-align:justify;margin:0}@media (max-width: 1440px){.about_8_0_0__title::before{height:55px}}@media (max-width: 1024px){.about_8_0_0__title{font-size:20px;margin:56px auto}.about_8_0_0__title::before{left:484px;top:50px;height:60px}.about_8_0_0__tt{font-size:14px}.about_8_0_0__tt:nth-child(1)::before{left:88px}.about_8_0_0__tt::before{left:75px}}@media (max-width: 768px){.about_8_0_0__title{width:35%;font-size:16px;margin:56px auto}.about_8_0_0__title::before{left:375px;top:44px}.about_8_0_0__tt{margin-bottom:30px;font-size:13px}.about_8_0_0__tt:nth-child(1)::before{left:68px}.about_8_0_0__tt::before{left:60px}}@media (max-width: 480px){.about_8_0_0{background-image:none;background-color:#027f78}.about_8_0_0__title{width:80%;font-size:16px;margin:56px auto 40px}.about_8_0_0__title::before{display:none}.about_8_0_0 .mb{display:block;margin-top:-40px}.about_8_0_0 .pc{display:none}}@media (max-width: 360px){.about_8_0_0 .accordions-content__tt{font-size:13px}}
+.about_8_0_0 {
+  background: url(../images/ab-bg_02.jpg) center 0 no-repeat;
+  padding: 30px 0; }
+  .about_8_0_0 .mb {
+    display: none; }
+  .about_8_0_0 .accordions-content_active {
+    max-height: max-content; }
+  .about_8_0_0 .accordions-title {
+    font-weight: bold;
+    border-radius: 33px;
+    background-color: #e8bd4b;
+    color: #392903;
+    text-align: center;
+    margin: 8px auto 5px;
+    padding: 10px 30px;
+    display: table; }
+  .about_8_0_0 .accordions-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+  .about_8_0_0 .accordions-content {
+    background-color: unset; }
+    .about_8_0_0 .accordions-content__tt {
+      margin-top: 0px;
+      margin-bottom: 5px;
+      border-radius: 33px;
+      text-align: center;
+      /* width: 85%; */
+      min-width: 60%;
+      padding: 5px 13px;
+      background: #ece2d6; }
+      .about_8_0_0 .accordions-content__tt a {
+        color: #392903; }
+  .about_8_0_0 .accordions-title-st {
+    background-color: #e8bd4b;
+    color: #392903; }
+  .about_8_0_0__title {
+    font-size: 24px;
+    text-align: center;
+    font-weight: 600;
+    color: #037e79;
+    padding: 10px 20px;
+    margin: 53px auto;
+    background-color: #ffecb8;
+    width: 30%;
+    border-radius: 20px; }
+    .about_8_0_0__title::before {
+      content: '';
+      position: absolute;
+      left: 585px;
+      top: 56px;
+      width: 1px;
+      height: 53px;
+      border: 0.25px solid #fff; }
+  .about_8_0_0__line {
+    width: 81%;
+    margin: 15px auto 40px;
+    position: relative;
+    border-top: 1px solid #fff; }
+  .about_8_0_0__box {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between; }
+  .about_8_0_0__tt {
+    font-size: 16px;
+    text-align: center;
+    color: #fff;
+    padding: 8px 10px;
+    border-radius: 20px;
+    margin: 0 auto;
+    margin-bottom: 34px;
+    width: 85%;
+    position: relative; }
+    .about_8_0_0__tt:nth-child(1)::before {
+      border: 0.25px solid #fff;
+      left: 108px;
+      height: 39px;
+      top: -39px; }
+    .about_8_0_0__tt::before {
+      content: '';
+      position: absolute;
+      top: -30px;
+      left: 92px;
+      width: 1px;
+      height: 30px;
+      border: 0.25px dashed #6c6c6c; }
+  .about_8_0_0__item {
+    width: 19%; }
+    .about_8_0_0__item:nth-child(1) .about_8_0_0__tt {
+      position: relative;
+      color: #392903;
+      background-color: #e8bd4b; }
+      .about_8_0_0__item:nth-child(1) .about_8_0_0__tt a {
+        color: #392903; }
+      .about_8_0_0__item:nth-child(1) .about_8_0_0__tt:nth-child(1) {
+        width: 100%;
+        font-weight: bold;
+        background-color: #e8bd4b; }
+        .about_8_0_0__item:nth-child(1) .about_8_0_0__tt:nth-child(1) a {
+          color: #392903; }
+    .about_8_0_0__item .about_8_0_0__tt {
+      background-color: #027f78; }
+      .about_8_0_0__item .about_8_0_0__tt a {
+        color: #fff; }
+      .about_8_0_0__item .about_8_0_0__tt:nth-child(1) {
+        width: 100%;
+        font-weight: bold;
+        color: #037e79;
+        background-color: #fff; }
+        .about_8_0_0__item .about_8_0_0__tt:nth-child(1) a {
+          color: #037e79; }
+  .about_8_0_0 p {
+    text-align: justify;
+    margin: 0; }
+  @media (max-width: 1440px) {
+    .about_8_0_0__title::before {
+      height: 55px; } }
+  @media (max-width: 1024px) {
+    .about_8_0_0__title {
+      font-size: 20px;
+      margin: 56px auto; }
+      .about_8_0_0__title::before {
+        left: 484px;
+        top: 50px;
+        height: 60px; }
+    .about_8_0_0__tt {
+      font-size: 14px; }
+      .about_8_0_0__tt:nth-child(1)::before {
+        left: 88px; }
+      .about_8_0_0__tt::before {
+        left: 75px; } }
+  @media (max-width: 768px) {
+    .about_8_0_0__title {
+      width: 35%;
+      font-size: 16px;
+      margin: 56px auto; }
+      .about_8_0_0__title::before {
+        left: 375px;
+        top: 44px; }
+    .about_8_0_0__tt {
+      margin-bottom: 30px;
+      font-size: 13px; }
+      .about_8_0_0__tt:nth-child(1)::before {
+        left: 68px; }
+      .about_8_0_0__tt::before {
+        left: 60px; } }
+  @media (max-width: 480px) {
+    .about_8_0_0 {
+      background-image: none;
+      background-color: #027f78; }
+      .about_8_0_0__title {
+        width: 80%;
+        font-size: 16px;
+        margin: 56px auto 40px; }
+        .about_8_0_0__title::before {
+          display: none; }
+      .about_8_0_0 .mb {
+        display: block;
+        margin-top: -40px; }
+      .about_8_0_0 .pc {
+        display: none; } }
+  @media (max-width: 360px) {
+    .about_8_0_0 .accordions-content__tt {
+      font-size: 13px; } }
+
 /*# sourceMappingURL=about_8_0_0.css.map */
