--- a/Header/header_3_0_0/sass/header_3_0_0.scss
+++ b/Header/header_3_0_0/sass/header_3_0_0.scss
@@ -151,12 +151,12 @@ a {
             height: 100%;
         }
     }
-    //end menu gioi thieu
-    // .container {
-    //     width: 1310px;
-    //     padding: 0 15px;
-    //     margin: 0 auto;
-    // }
+    //end menu gioi thieu 
+    .container {
+        max-width: 1350px;
+        padding: 0 15px;
+        margin: 0 auto;
+    }
     h4 {
         color: #fff;
         font-size: 15px;
@@ -543,6 +543,13 @@ a {
     }
 }
 
+// @media (max-width: 1440px) {
+//     .header_3_0_0 {
+//         .container {
+//             max-width: 1200px;
+//         }
+//     }
+// }
 @media #{$r1024} {
     body {
         padding-top: 65px;
