--- a/Home/basic_3_0_0/sass/basis_3_3_0.scss
+++ b/Home/basic_3_0_0/sass/basis_3_3_0.scss
@@ -29,37 +29,61 @@ img {
         text-transform: uppercase;
         color: red;
         font-size: 32px;
+        font-weight: bold;
     }
     &__des {
         font-size: 20px;
         margin-top: 5px;
     }
     &__list {
-        display: grid;
-        grid-template-columns: auto auto auto;
-        gap: 20px;
+        gap: 8px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
     }
     &__item {
         // width: calc(100% / 3);
         // margin-bottom: 25px;
+        width: 32%;
+        margin-bottom: 10px;
     }
     &__heading {
         display: flex;
-        margin-top: 25px;
+        margin-top: 10px;
         align-items: center;
         justify-content: center;
     }
     &__name {
         font-size: 16px;
+        margin: 0px 0px 0px;
         margin-right: 5px;
     }
-    .btn {
+    &__more {
         background-color: #0054fd;
         width: 98px;
-        height: 18px;
+        height: 23px;
         text-decoration: none;
-        border-radius: 3px;
+        border-radius: 2px;
         color: white;
-        padding: 4px 3px;
+        display: inline-block;
+        padding: 1px 5px;
+    }
+}
+
+@media (max-width: 1023px) {
+    .basis_3_0_0 {
+        &__item {
+            width: 46%;
+            margin-bottom: 15px;
+        }
+    }
+}
+
+@media (max-width: 425px) {
+    .basis_3_0_0 {
+        &__item {
+            width: 100%;
+            margin-bottom: 15px;
+        }
     }
 }
