--- a/Home/basis_3_1_0/scss/basis_3_1_0__main.scss
+++ b/Home/basis_3_1_0/scss/basis_3_1_0__main.scss
@@ -1,13 +1,20 @@
 .basis_3_1_0{
-    width: 60%;
+    width: 80%;
     display: flex;
     margin: 0 auto;
+    flex-wrap: wrap;
     &__temp{
         margin: 0 auto;
         color: white;
         text-align: center;
     }
-
+    @media (max-width: 1441px) {
+        .temp2{
+            img{ 
+                display: none;
+            }
+        }
+    }
     .temp1{
         &__t1{
             img{
