--- a/Home/doctor_3_1_0/scss/main.css
+++ b/Home/doctor_3_1_0/scss/main.css
@@ -3,17 +3,41 @@
   background-size: 100%;
   height: 1200px;
   font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif; }
+  @media (max-width: 1480px) {
+    .doctor_3_1_0 .doctor_3_1_0_info {
+      text-align: center; }
+      .doctor_3_1_0 .doctor_3_1_0_info .doctor_3_1_0_description {
+        display: none; } }
+  @media (max-width: 820px) {
+    .doctor_3_1_0 {
+      height: 1700px; }
+      .doctor_3_1_0__item2 {
+        margin-left: 20%; }
+      .doctor_3_1_0 .doctor_3_1_0_description {
+        display: none; }
+      .doctor_3_1_0 .doctor_3_1_0_info h2 {
+        font-size: 20px; } }
   .doctor_3_1_0__box {
     display: flex;
     justify-content: center;
     flex-direction: column;
+    flex-wrap: wrap;
     padding: 20px;
-    width: 65%;
+    width: 80%;
     margin: 0 auto; }
+    @media (max-width: 820px) {
+      .doctor_3_1_0__box {
+        width: 100%; } }
   .doctor_3_1_0__item1 {
-    display: flex; }
+    display: flex;
+    width: 100%; }
+    @media (max-width: 820px) {
+      .doctor_3_1_0__item1 {
+        display: inline; }
+        .doctor_3_1_0__item1 img {
+          width: 50%;
+          margin-left: 25%; } }
     .doctor_3_1_0__item1 img {
-      width: 30%;
       margin-right: 30px; }
   .doctor_3_1_0__title {
     text-align: center;
@@ -23,7 +47,7 @@
     .doctor_3_1_0__title h2 {
       margin-top: 20px; }
   .doctor_3_1_0_info {
-    padding-left: 40px;
+    padding: 0 40px;
     color: white;
     text-align: justify;
     line-height: 2;
@@ -33,24 +57,31 @@
       font-size: 18px; }
     .doctor_3_1_0_info h2 {
       font-size: 30px; }
+    @media (max-width: 820px) {
+      .doctor_3_1_0_info {
+        padding: 0;
+        width: 90%; } }
   .doctor_3_1_0__item2 {
+    width: 80%;
     padding-top: 30px;
     margin: 0 auto;
     color: white;
     display: flex;
     text-align: center; }
     .doctor_3_1_0__item2 img {
-      width: 155px;
-      height: 155px;
-      margin: 0 10px;
+      width: 80%;
+      margin: 0 auto;
       border: #00b7ff 4px solid;
       border-radius: 15px; }
     .doctor_3_1_0__item2 .infor {
       text-align: center; }
+    @media (max-width: 820px) {
+      .doctor_3_1_0__item2 {
+        flex-wrap: wrap; } }
 
 .modal {
   display: none;
-  color: #000000;
+  color: #ffffff;
   position: absolute;
   top: 0px;
   left: 0px;
@@ -76,7 +107,7 @@
   .modal .animate-top {
     width: 40%;
     border-radius: 10px;
-    background-color: #ffffff;
+    background-color: rgba(34, 34, 34, 0.9);
     margin: 50px auto; }
   .modal .modal-body {
     padding-bottom: 20px; }
