--- a/Home/doctor_3_1_0/scss/main.scss
+++ b/Home/doctor_3_1_0/scss/main.scss
@@ -4,19 +4,53 @@
     background-size: 100%;
     height: 1200px;
     font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    @media (max-width: 1480px) {
+        
+        .doctor_3_1_0_info{
+            text-align: center;
+            .doctor_3_1_0_description{
+                display: none;
+            }
+        }
+    }
+    @media (max-width: 820px) {
+        height: 1700px;
+        &__item2{
+            margin-left: 20%;
+        }
+        .doctor_3_1_0_description{
+            display: none;
+        }
+        .doctor_3_1_0_info{
+            h2{
+                font-size: 20px;
+            }
+        }
+    }
     &__box{
         display: flex;
         justify-content: center;
         flex-direction: column;
+        flex-wrap: wrap;
         padding: 20px;
-        width: 65%;
+        width: 80%;
         margin: 0 auto;
+        @media (max-width: 820px) {
+            width: 100%;
+        }
     }
     &__item1{
         display: flex;
+        width: 100%;
+        @media (max-width: 820px) {
+            display: inline;
+            img{
+                width: 50%;
+                margin-left: 25%;
 
+            }
+        }
         img {
-            width: 30%;
             margin-right: 30px;
         }
     }
@@ -30,7 +64,7 @@
         }
     }
     &_info{
-        padding-left: 40px;
+        padding: 0 40px;
         color: rgb(255, 255, 255);
         text-align: justify;
         line-height: 2;
@@ -42,22 +76,29 @@
         h2{
             font-size: 30px;
         }
+        @media (max-width: 820px) {
+            padding: 0;
+            width: 90%;
+        }
     }
     &__item2{
+        width: 80%;
         padding-top: 30px;
         margin: 0 auto;
         color: rgb(255, 255, 255);
         display: flex;
         text-align: center;
         img{
-            width: 155px;
-            height: 155px;
-            margin: 0 10px;
+            width: 80%;
+            margin: 0 auto;
             border: #00b7ff 4px solid;
             border-radius: 15px;
         }
         .infor{
             text-align: center;
+        }
+        @media (max-width: 820px) {
+            flex-wrap: wrap;
         }
     }
 }
@@ -65,7 +106,7 @@
 
 .modal{
     display: none;
-    color: #000000;
+    color: #ffffff;
     position: absolute;
     top: 0px;
     left: 0px;
@@ -96,7 +137,7 @@
     .animate-top{
         width: 40%;
         border-radius: 10px;
-        background-color: #ffffff;
+        background-color: rgba($color: #222222, $alpha: 0.9);
         margin: 50px auto;
     }
     .modal-body{
