--- a/Home/news_3_3_0/sass/news_3_3_0.scss
+++ b/Home/news_3_3_0/sass/news_3_3_0.scss
@@ -1,13 +1,13 @@
 
 
 %font1 {
-    font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    font-family:  Helvetica , Arial, sans-serif;
 }
 
 $color1:#004689;
 
 %icon {
-    font-family: "fontello";
+    font-family:  Helvetica , Arial, sans-serif;
     font-style: normal;
     font-weight: 400;
     speak: none;
@@ -28,10 +28,12 @@ $color1:#004689;
     padding: 30px 0;
     background-color: rgb(241, 241, 241);
     .container{
-        width: 60%;
+        width: 80%;
         margin: 0 auto;
-        @media (max-width:600px) {
+        
+        @media (max-width:820px) {
             width: 100%;
+            font-display: initial;
         }
     }
     &__title {
@@ -45,14 +47,14 @@ $color1:#004689;
 
     &__box {
         display: flex;
-        justify-content: space-between;
-        margin: 0 auto;
         flex-wrap: wrap;
+        justify-content: space-between;
+        margin: auto;
     }
 
     &__boxLeft {
         width: 50%;
-        @media (max-width: 600px) {
+        @media (max-width: 820px) {
             width: 100%;
         }
         &__detail {
@@ -96,7 +98,7 @@ $color1:#004689;
 
     &__boxRight {
         width: 48%;
-        @media (max-width: 600px) {
+        @media (max-width: 820px) {
             width: 100%;
             margin-top: 20px;
         }
