--- a/themes/home/Header/header_20_0_0/sass/header_20_0_0.scss
+++ b/themes/home/Header/header_20_0_0/sass/header_20_0_0.scss
@@ -46,6 +46,7 @@ a {
         &__section {
             display: flex;
             align-items: center;
+            justify-content: flex-end;
             width: 75%;
         }
         &__item {
@@ -214,6 +215,7 @@ a {
             display: none;
         }
         &Nav {
+          
             font-size: 25px;
             color: #fff;
             background-color: #1264ba;
