--- a/themes/home/Home/service_15_0_0/sass/service_15_0_0.scss
+++ b/themes/home/Home/service_15_0_0/sass/service_15_0_0.scss
@@ -102,12 +102,7 @@
             width: 40%;
         }
         &__box2 {
-            display: flex;
-            width: 100%;
-            margin-bottom: 10px;
-            img {
-                width: 40%
-            }
+            display: none;
         }
         &__title3 {
             margin: 10px 0 0 10px;
