--- a/themes/home/Footer/footer_5_0_0/css/footer_5_0_0.css
+++ b/themes/home/Footer/footer_5_0_0/css/footer_5_0_0.css
@@ -11,14 +11,6 @@
     width: 1201px; }
   .footer_5_0_0 .footer_5_0_0__container {
     position: relative; }
-  .footer_5_0_0-bct {
-    width: 170px;
-    margin-right: 20px; }
-    .footer_5_0_0-bct img {
-      width: 100%; }
-
-.footer_5_0_0__bct img {
-  width: 70%; }
 
 .footer_5_0_0Item-gp {
   display: flex;
@@ -146,10 +138,7 @@
   .footer_5_0_0Item-brand img {
     margin-bottom: 10px;
     width: 45%;
-    height: auto; }
-  .footer_5_0_0Item-brand .footer_5_0_0__bct {
-    margin-top: 0px;
-    margin: 0 auto; } }
+    height: auto; } }
 .footer_5_0_0Item-city {
   width: 32%; }
 
