--- a/themes/home/Home/service_15_0_0/css/service_15_0_0.css
+++ b/themes/home/Home/service_15_0_0/css/service_15_0_0.css
@@ -77,11 +77,7 @@
     .service_15_0_0__item {
       width: 40%; }
     .service_15_0_0__box2 {
-      display: flex;
-      width: 100%;
-      margin-bottom: 10px; }
-      .service_15_0_0__box2 img {
-        width: 40%; }
+      display: none; }
     .service_15_0_0__title3 {
       margin: 10px 0 0 10px;
       text-align: start;
