--- a/Home/doctor_3_1_0/css/style.css
+++ b/Home/doctor_3_1_0/css/style.css
@@ -1,31 +1,118 @@
-body {
-  margin: 0;
-  padding: 0; }
-
 .doctor_3_1_0 {
-  background-image: url(../media/images/slide_bg.jpg);
+  background-image: url(../media/slide_bg.jpg);
   background-size: 100%;
-  height: 700px; }
-  .doctor_3_1_0 .title {
-    padding-top: 20px;
-    color: #23facb;
+  color: white; }
+  .doctor_3_1_0__container {
+    width: 70%;
+    margin: 0px auto;
+    color: white; }
+  .doctor_3_1_0__title {
+    width: 100%;
+    padding: 20px 0;
+    text-align: center;
     font-size: 25px;
-    text-align: center; }
-  .doctor_3_1_0_container {
-    width: 60%;
     margin: 0 auto;
-    color: white;
-    display: flex; }
-    .doctor_3_1_0_container .infor {
+    color: #31ffba; }
+  .doctor_3_1_0__information {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center; }
+    .doctor_3_1_0__information img {
+      max-width: 30%;
+      margin-right: 20px;
+      margin-left: 5%; }
+    .doctor_3_1_0__information .description {
+      width: 60%;
+      padding: 30px;
+      background-color: rgba(255, 255, 255, 0.1);
+      border-radius: 5px; }
+    .doctor_3_1_0__information .overlay {
+      display: none;
+      position: fixed;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      background: rgba(0, 44, 110, 0.5); }
+      .doctor_3_1_0__information .overlay .popup {
+        margin: 70px auto;
+        padding: 20px;
+        background: #e9e9e9;
+        border-radius: 5px;
+        width: 30%;
+        position: relative;
+        color: black; }
+        .doctor_3_1_0__information .overlay .popup .h2 {
+          margin-top: 0;
+          color: #333;
+          font-family: Tahoma, Arial, sans-serif; }
+        .doctor_3_1_0__information .overlay .popup .close {
+          position: absolute;
+          top: 20px;
+          right: 30px;
+          font-size: 30px;
+          font-weight: 900;
+          text-decoration: none;
+          color: #070707; }
+        .doctor_3_1_0__information .overlay .popup .close:hover {
+          color: #06d85f; }
+        .doctor_3_1_0__information .overlay .popup .pop-description {
+          max-height: 30%; }
+  .doctor_3_1_0__list_doctor {
+    max-width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding-bottom: 20px;
+    margin: 20px 0; }
+    .doctor_3_1_0__list_doctor .doctor {
+      width: 14%;
+      margin-left: 20px;
+      text-align: center;
+      font-size: 13px;
+      margin-bottom: 20px; }
+      .doctor_3_1_0__list_doctor .doctor img {
+        max-width: 100%;
+        border: #2998ff 3px solid;
+        border-radius: 10px; }
+  @media (max-width: 1600px) {
+    .doctor_3_1_0__information .description {
+      max-width: 70%; } }
+  @media (max-width: 1100px) {
+    .doctor_3_1_0__title {
+      font-size: 20px; }
+    .doctor_3_1_0__information .description .des {
+      display: none; }
+    .doctor_3_1_0__list_doctor .doctor {
+      width: 25%; } }
+  @media (max-width: 782px) {
+    .doctor_3_1_0__title {
+      font-size: 15px; } }
+  @media (max-width: 600px) {
+    .doctor_3_1_0__title {
+      font-size: 14px; }
+    .doctor_3_1_0__information img {
+      max-width: 50%; }
+    .doctor_3_1_0__information .description {
+      max-width: 35%; }
+      .doctor_3_1_0__information .description h2 {
+        font-size: 14px; }
+      .doctor_3_1_0__information .description .des {
+        display: none; }
+    .doctor_3_1_0__list_doctor {
+      margin-right: 15px; }
+      .doctor_3_1_0__list_doctor .doctor h3 {
+        margin-top: 0px; } }
+  @media (max-width: 375px) {
+    .doctor_3_1_0__list_doctor .doctor {
       width: 100%; }
-      .doctor_3_1_0_container .infor .slide1 {
-        background-image: url(../media/images/BSTram.png);
-        background-repeat: no-repeat;
-        background-size: 30%;
-        height: 500px; }
-        .doctor_3_1_0_container .infor .slide1 img {
-          float: left; }
-      .doctor_3_1_0_container .infor .description {
-        float: left; }
+    .doctor_3_1_0__information .description h2 {
+      font-size: 11px; } }
+  @media (max-width: 280px) {
+    .doctor_3_1_0__information .img_title, .doctor_3_1_0__information .description {
+      display: none; }
+    .doctor_3_1_0__list_doctor .doctor {
+      width: 40%; } }
 
 /*# sourceMappingURL=style.css.map */
