--- a/themes/home/Home/video_12_0_0/sass/video_12_0_0.scss
+++ b/themes/home/Home/video_12_0_0/sass/video_12_0_0.scss
@@ -74,6 +74,7 @@
     }
     .desc2 {
         width: 55%;
+        font-size: 18px;
         padding-left: 10px;
         color: #636363;
     }
@@ -87,6 +88,9 @@
         }
         .pic2 {
             width: 68%
+        }
+        .desc2 {
+            font-size: 14px;
         }
     }
 }
