--- a/Home/news_3_3_0/css/news_3_3_0.css
+++ b/Home/news_3_3_0/css/news_3_3_0.css
@@ -4,10 +4,6 @@
   .news_3_3_0 .container {
     width: 80%;
     margin: 0 auto; }
-    @media (max-width: 820px) {
-      .news_3_3_0 .container {
-        width: 100%;
-        font-display: initial; } }
   .news_3_3_0__title {
     text-align: center;
     color: #e01111; }
@@ -88,5 +84,19 @@
     color: #0329FF; }
     .news_3_3_0__detail p {
       color: #000; }
+  @media (max-width: 600px) {
+    .news_3_3_0__smallItem {
+      flex-wrap: wrap; }
+      .news_3_3_0__smallItem__pic {
+        width: 20%; }
+      .news_3_3_0__smallItem__detail p {
+        margin-right: 5px; } }
+  @media (max-width: 350px) {
+    .news_3_3_0__smallItem {
+      flex-wrap: wrap; }
+      .news_3_3_0__smallItem__pic {
+        width: 100%; }
+      .news_3_3_0__smallItem__detail p {
+        margin-right: 5px; } }
 
 /*# sourceMappingURL=news_3_3_0.css.map */
